# code

./: .gitignore  .snapshots.yml  AGENTS.md  CANVAS_MVP.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  PORTING.md  README.md  REFACTOR.md  REFACTOR_PROGRESS.md  REFACTOR_SLICES.json  REPORT.md  UPSTREAM_REPLAY.md  biome.jsonc  knip.json  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: README.md  config.json
.claude/: settings.json  settings.local.json
.claude/skills/finalize-inbox-sync/: SKILL.md
.claude/skills/implement-inbox-sync/: SKILL.md
.claude/skills/inspect-inbox-surfaces/: SKILL.md
.claude/skills/plan-inbox-sync/: SKILL.md
.claude/skills/quill-code/: SKILL.md
.claude/skills/reflect-on-inbox-sync/: SKILL.md
.claude/skills/storybook-stories/: SKILL.md
.claude/skills/sync-inbox-to-cloud/: SKILL.md
.claude/skills/test-electron-app/: SKILL.md
.claude/stock-research/: agent-usage.json
.github/: CODEOWNERS  pull_request_template.md
.github/actions/build-agent-release/: action.yml
.github/actions/restore-turbo-cache/: action.yml
.github/scripts/: react-doctor-comment.mjs
.github/workflows/: agent-release-verify.yml  agent-release.yml  agent-server-rust-release.yml  agent-tag.yml  build.yml  cleanup-draft-releases.yml  code-build-test.yml  code-discord-release.yml  code-quality.yml  code-release.yml  code-storybook.yml  code-tag.yml  code-update-e2e.yml  codeql.yml  mobile-build.yml  mobile-promote.yml  pr-approval-agent.yml  pr-build-installer.yml  react-doctor.yml  rust.yml  stale.yml  test.yml  trunk-impacted-targets.yml  typecheck.yml  warm-caches.yml
apps/cli/: README.md  package.json  tsup.config.ts  vitest.config.ts
apps/cli/src/: display.test.ts  display.ts  main.ts
apps/code/: README.md  SCHEMA.md  electron-builder.config.cjs  electron-builder.ts  electron.vite.config.ts  forge.config.ts  index.html  package.json  runtime-dependencies.ts  snapshots.yml  tailwind.config.js  test-runner-jest.config.js  tsconfig.web.json  vite-main-plugins.mts  vite.main.config.mts  vite.preload.config.mts  vite.renderer.config.mts  vite.shared.mts  vite.workspace-server.config.mts  vitest.config.ts
apps/code/.storybook/: main.ts  preview.tsx  test-runner.ts  withAppProviders.tsx
apps/code/scripts/: before-pack.cjs  build-linux-docker.sh  build.mjs  dev.mjs  download-binaries.mjs  download-binaries.test.mjs  generate-routes.mjs  postinstall.sh
apps/code/src/: vite-env.d.ts
apps/mobile/: README.md  app.json  eas.json  metro.config.js  package.json  tailwind.config.js  vitest.config.ts
apps/mobile/scripts/: push-sim.sh  send-test-push.sh
apps/pi-ext/: README.md  package.json  tsconfig.json  tsup.config.ts
apps/pi-ext/src/: config.ts  extension.ts  format.ts
apps/web/: README.md  dev-server.mjs  index.html  package.json  vite.aliases.ts  vite.config.ts  vitest.config.ts
apps/web/src/: Providers.tsx  main.tsx  web-archive-store.ts  web-attachment-store.ts  web-auth-adapters.ts  web-browser-tabs-store.ts  web-container.test.ts  web-container.ts  web-host-router.ts  web-oauth-flow.ts  web-persister.ts  web-sessions-clients.ts  web-storage.ts  (+3 more)
docs/: AUTO-UPDATE-TESTING.md  DEEP-LINKS.md  LOCAL-DEVELOPMENT.md  SECURE-ENCLAVE-SIGNING.md  TROUBLESHOOTING.md  UPDATES.md  architecture.md  canvas-freeform-react-plan.md  cloud-mcp-import.md  cloud-mcp-relay.md  conventions.md  extensions.md  home-tab.md  merge-queue.md  testing.md  workflow-architecture.md
docs/plans/: channels-architecture.md  channels-feature-extraction.md  skills-tab.md
extensions/ralph-loop/: package.json
notes/: HEDGEMONY.md
notes/hedgemony/: backend-frontend.md  backend-integration.md  code-review-fixes.md  finops.md  hedgehog-direct-injection.md  modularity-review.md  names.md  operator-attribution.md  refactor-status.md  spec.md  ui-tech-options.md  user-stories.md  voice-lines.json
notes/rts/: code-review-fixes.md  federation.md  fun-mode-voice.md  hedgehog-direct-injection.md  multiplayer.md  names.md  repo-slug-validation-plan.md  spec.md  stage5-plan.md  ui-tech-options.md  user-stories.md  validation-criteria-plan.md  voice-generation.md  voice-lines.json
patches/: @posthog__hedgehog-mode.patch  better-sqlite3@12.10.0.patch
rust/: .gitignore  Cargo.toml  README.md
rust/crates/acp/: Cargo.toml
rust/crates/acp/src/: lib.rs  peer.rs
rust/crates/agent-server/: Cargo.toml
rust/crates/agent-server/src/: adapter.rs  artifacts.rs  bus.rs  checkpoint.rs  client.rs  command.rs  config.rs  error_class.rs  gateway.rs  http.rs  ingest.rs  jwt.rs  lib.rs  log_writer.rs  main.rs  posthog_api.rs  resume.rs  server.rs  system_prompt.rs
rust/crates/agent-server/tests/: e2e.rs
rust/crates/agent-server/tests/fixtures/: test_jwt_private.pem  test_jwt_public.pem
rust/crates/agent-tools/: Cargo.toml
rust/crates/agent-tools/src/: artefacts.rs  gh.rs  lib.rs  mcp.rs  session_jsonl.rs
rust/crates/claude-driver/: Cargo.toml
rust/crates/claude-driver/src/: cli.rs  convert.rs  driver.rs  error_class.rs  instructions.rs  lib.rs  main.rs  prompt.rs  signed_git.rs  transport.rs
rust/crates/claude-driver/tests/: driver_e2e.rs
rust/crates/codex-driver/: Cargo.toml
rust/crates/codex-driver/src/: driver.rs  input.rs  lib.rs  local_tools_stdio.rs  main.rs  mapping.rs  modes.rs  rpc.rs  sidecar.rs  spawn.rs  structured.rs  turns.rs  usage.rs
rust/crates/codex-driver/tests/: driver_e2e.rs
scripts/: bench-memory-run.mjs  bench-memory.mjs  check-local-first.mjs  check-radix-imports.mjs  commit-storybook-snapshots.mjs  external-usage.mjs  generate-voice.mjs  host-boundary-allowlist.json  prune-dead-decls.mjs  radix-allowlist.json  rebuild-better-sqlite3-electron.mjs  rebuild-better-sqlite3-node.mjs  refactor-init.sh  use-local-posthog.mjs
scripts/rts/: generate-voice.mjs
scripts/vosk/: setup-model.sh
scripts/whisper-wasm/: CMakeLists.txt  README.md  binding.cpp  build.sh  download-model.mjs
tooling/typescript/: package.json
tools/pr-approval-agent/: README.md  dismiss_check.py  gates.py  review_pr.py  reviewer.py  test_review_pr.py
(+1406 files in other folders)
