[package]
name = "posthog-acp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent Client Protocol (ACP) JSON-RPC peer over newline-delimited JSON streams"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
