[package]
name = "posthog-agent-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PostHog cloud agent server — hosts an ACP agent inside cloud sandboxes"

[[bin]]
name = "agent-server"
path = "src/main.rs"

[[bin]]
name = "mock-acp-agent"
path = "src/bin/mock_acp_agent.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { version = "0.22.1", default-features = false }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = "0.4.3"
jsonwebtoken = { workspace = true }
posthog-acp = { path = "../acp" }
posthog-agent-tools = { path = "../agent-tools" }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { version = "0.11.0", default-features = false }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = { workspace = true }
