[package]
name = "posthog-agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared PostHog agent tooling: signed-git local tools and the posthog-code-tools MCP server, used by the Claude and codex native drivers"

[dependencies]
anyhow = { workspace = true }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
futures = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
