[package]
name = "posthog-codex-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native ACP driver for the codex app-server — replaces the Node ACP sidecar for codex cloud runs"

[[bin]]
name = "codex-acp-driver"
path = "src/main.rs"

[[bin]]
name = "mock-codex-app-server"
path = "src/bin/mock_codex_app_server.rs"

[dependencies]
async-trait = { workspace = true }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
posthog-acp = { path = "../acp" }
posthog-agent-tools = { path = "../agent-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
